# Zyntra-Saas

./: .env.example  .eslintignore  .eslintrc.json  .gitignore  .prettierignore  AGENTS.md  ARQUITETURA-SISTEMA-ZYNTRA.md  AUDITORIA-2026-05-29.md  AUDITORIA-COMPRAS-FATURAMENTO-COMPLETA.md  AUDITORIA-FIX-REDIRECT-LOOP-3-EMPRESAS-2026-05-24.md  AUDITORIA-MODULO-VENDAS-2026-03-20.md  AUDITORIA-SISTEMA-COMPLETA-2026-03-24.md  AUDITORIA-SISTEMA-ZYNTRA.md  AUDITORIA-VPS-2026-03-17.md  CHANGELOG.md  CHAOS_STRESS_AUDIT.md  CLAUDE.md  CONTEXTO-FINANCEIRO-CHAT.md  CORRECOES-MULTI-COMPANY-COMPLETO.md  Dockerfile  ENTERPRISE_SECURITY_AUDIT_REPORT.md  FIX-REDIRECT-LOOP-LOGISTICA-FINANCEIRO.md  FUNCIONALIDADES-E-STATUS-ZYNTRA-ERP.md  GOD-MODE-AUDIT-RISK-MATRIX.md  PCP - Kanban Feature.md  PROMPT-A-PCP-VENDAS-FATURAMENTO.md  PROMPT-ANALISE-MODULOS-COMPLETA.md  PROMPT-ANALISE-MULTI-COMPANY-COMPLETA.md  PROMPT-ANALISE-MULTI-COMPANY-MELHORADO.md  PROMPT-AUDITORIA-TEMPLATES-BRANDING-CHAT.md  PROMPT-B-FINANCEIRO-FLUXO-CAIXA.md  PROMPT-CORRECAO-DASHBOARD-FATURAMENTO.md  PROMPT-TESTE-ANALISE-MODULOS-COMPLETA.md  PROMPT-TESTE-AUDITORIA-TEMPLATES-BRANDING-CHAT.md  PROMPT-TESTE-DASHBOARD-FATURAMENTO.md  Proposta-Comercial-Zyntra-ERP.html  README-AUDITORIA.md  README.md  RELATORIO-ACESSOS-ALUFORCE-2026-04-05.md  RELATORIO-AUDITORIA-COMPLETA-ERP-2026-07.md  (+360 more)
.claude/: settings.json  settings.local.json
Chat Teams/: database.js  package.json  server.js
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/capabilities/: main.json
desktop-app/src-tauri/src/: lib.rs  main.rs
(+4280 files in other folders)
